work on the sidebar options

--- a/drinks.html
+++ b/drinks.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="shortcut icon" href="images/mealy.svg" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Mealy</title>
   </head>
   <body>
@@ -58,8 +58,19 @@
                 <div class="hamburger__menu__btn__text">
                     <p>Don't have an account? <span>Register</span></p>
                 </div>
-
             </div>
+
+            <!-- Add the sidebar menu options -->
+            <ul class="sidebar-menu">
+                <li class="menu__option-001"><a href="soup.html">Soups</a></li>
+                <li class="menu__option-002"><a href="swallow.html">Swallow</a></li>
+                <li class="menu__option-003"><a href="ricePasta.html">Rice & Pasta</a></li>
+                <li class="menu__option-004"><a href="proteins.html">Proteins</a></li>
+                <li class="menu__option-005"><a href="sides.html">Sides</a></li>
+                <li class="menu__option-006"><a href="drinks.html">Drinks</a></li>
+            </ul>
+            <!-- End of the sidebar menu options -->
+
         </div>
 
 
