--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="shortcut icon" href="images/mealy.svg" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Mealy</title>
   </head>
   <body>
@@ -60,6 +60,17 @@
                 </div>
 
             </div>
+
+            <!-- Add the sidebar menu options -->
+            <ul class="sidebar-menu">
+                <li class="menu__option-001"><a href="soup.html">Soups</a></li>
+                <li class="menu__option-002"><a href="swallow.html">Swallow</a></li>
+                <li class="menu__option-003"><a href="ricePasta.html">Rice & Pasta</a></li>
+                <li class="menu__option-004"><a href="proteins.html">Proteins</a></li>
+                <li class="menu__option-005"><a href="sides.html">Sides</a></li>
+                <li class="menu__option-006"><a href="drinks.html">Drinks</a></li>
+            </ul>
+            <!-- End of the sidebar menu options -->
         </div>
 
 
@@ -96,29 +107,7 @@
         <div class="nav__tray__icon" id="nav-logo-tray">
             <img src="images/tray-icon.svg" alt="tray logo">
         </div>
-
     </div>
-    <!-- <div class="container">
-        <div class="slideshow__container" id="slideshow-container">
-            <img class="mySlides fade-in-image" src="images/efo-riro.png" />
-            <img class="mySlides fade-in-image" src="images/jollof-two.png" />
-            <img class="mySlides fade-in-image" src="images/amala-ewedu.png" />
-            <img class="mySlides fade-in-image" src="images/ofada.png" />
-            <img class="mySlides fade-in-image" src="images/egusi-fufu.png" />
-            <img class="mySlides fade-in-image" src="images/afang.png" />
-            <img class="mySlides fade-in-image" src="stew-rice-plantain.png" />
-            <img class="mySlides fade-in-image" src="images/amala.png" />
-            <img class="mySlides fade-in-image" src="images/jollof.png" />
-
-
-        </div>
-
-        <div class="centered">
-            <h1>Home for <span>mouth-watering</span> and <br><span>finger-licking</span> meals</h1>
-            <p>Deliciously made for you</p>
-            <button class="centered__btn">Go to Menu</button>
-        </div>
-    </div> -->
 </header>
 
 <!-- ----------------------------- End header------------------------>
@@ -133,10 +122,10 @@
     <ul class="menu__option">
         <li class="menu__option-001"><a href="soup.html">Soups</a></li>
         <li class="menu__option-002"><a href="swallow.html">Swallow</a></li>
-        <li class="menu__option-003"><a href="#">Rice & Pasta</a></li>
-        <li class="menu__option-004"><a href="#">Proteins</a></li>
-        <li class="menu__option-005"><a href="#">Sides</a></li>
-        <li class="menu__option-006"><a href="#">Drinks</a></li>
+        <li class="menu__option-003"><a href="ricePasta.html">Rice & Pasta</a></li>
+        <li class="menu__option-004"><a href="proteins.html">Proteins</a></li>
+        <li class="menu__option-005"><a href="sides.html">Sides</a></li>
+        <li class="menu__option-006"><a href="drinks.html">Drinks</a></li>
     </ul>
     <div class="menu__list">
        <div class="menu__list-design"></div>
